welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:8: error: '(' expected but identifier found.
  }else if a>b{
           ^