welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
  var min=0
  var max=0
  
  if (a<b){
  	min=a
  	max=b
  }else if a>b{
    min=b
    max=a
  }
  
  
  if (a==b){
    return 0
  }else if (a%5==b%5){
   	return min
  }else{
    return max
  }
}
  
   
  